force-app/main/default/objects/CLQ_Ratio__c/CLQ_Ratio__c.object-meta.xml
<CustomObject>
    <label>Ratio</label>
    <nameField>
        <displayFormat>Ratio-{000000}</displayFormat>
        <label>Ratio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>