force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_Age_Group_Range__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Age_Group_Range__c</fullName>
    <label>Age Group / Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 to &lt; 12 months</fullName>
            </value>
            <value>
                <fullName>12 months to &lt; 18 months</fullName>
            </value>
            <value>
                <fullName>18 months to &lt; 30 months</fullName>
            </value>
            <value>
                <fullName>30 months to &lt; 36 months</fullName>
            </value>
            <value>
                <fullName>3 years to &lt; 4 years</fullName>
            </value>
            <value>
                <fullName>4 years to &lt; 5 years</fullName>
            </value>
            <value>
                <fullName>5 years to &lt; Kindergarten</fullName>
            </value>
            <value>
                <fullName>School-Age to &lt; 11 years</fullName>
            </value>
            <value>
                <fullName>11 years +</fullName>
            </value>
            <value>
                <fullName>Mixed Age Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>