force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Group_Name__c</fullName>
    <label>Group Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>