force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_In_Out_of_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CLQ_In_Out_of_Compliance__c</fullName>
    <label>In/Out of Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>Out of Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>