force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_No_of_Children_Under_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_of_Children_Under_2__c</fullName>
    <label>No. of Children Under 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>