force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_Number_of_Children_Allowed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Number_of_Children_Allowed__c</fullName>
    <formula>CLQ_Room_Space__r.CLQ_Number_of_Children_Allowed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Children Allowed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>