force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_Room_Space_Location__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Room_Space_Location__c</fullName>
    <formula>TEXT(CLQ_Room_Space__r.CLQ_Room_Space_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room/Space Location</label>
    <type>Text</type>
</CustomField>