force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_Room_Space_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Room_Space_Number__c</fullName>
    <formula>VALUE(CLQ_Room_Space__r.CLQ_Room_Space_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room/Space Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>