force-app/main/default/objects/CLQ_Ratio__c/fields/CLQ_Staff_Child_Ratio__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Staff_Child_Ratio__c</fullName>
    <formula>CLQ_No_of_Staff__c / CLQ_No_of_Children__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff / Child Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>