force-app/main/default/objects/CLQ_Ratio__c/fields/Group_Information__c.field-meta.xml
<CustomField>
    <fullName>Group_Information__c</fullName>
    <label>Group Information</label>
    <referenceTo>CLQ_Enrollment_Group__c</referenceTo>
    <relationshipLabel>Ratios</relationshipLabel>
    <relationshipName>Ratios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>