force-app/main/default/objects/CLQ_Ratio__c/fields/Staff_to_Child_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Staff_to_Child_Ratio__c</fullName>
    <description>This field will calculate and display the ratio of children to staff in the group information</description>
    <formula>TEXT(CLQ_No_of_Staff__c) + &apos; to &apos; +  TEXT(CLQ_No_of_Children__c)</formula>
    <label>Staff to Child Ratio</label>
    <type>Text</type>
</CustomField>